# Schedule-sifter

./: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  README.md  comparable.cpp  comparable.h  list.cpp  list.h  main.cpp  object.cpp  object.h  person.cpp  person.h  schedule.cpp  schedule.h  test.cpp  timeInterval.cpp  timeInterval.h
